--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
     "@tanstack/react-query": "^5.90.20",
+    "@types/react-icons": "^2.2.7",
     "@types/react-redux": "^7.1.34",
     "@vkontakte/vk-bridge": "^2.7.1",
     "framer-motion": "^11.0.3",
@@ -18,6 +19,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.218",
     "react-redux": "^9.1.0",
     "styled-components": "^6.3.9"
