--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
 		"bcrypt": "^6.0.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.0",
 		"express": "^4.18.2",
@@ -34,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
+		"@types/cookie-parser": "^1.4.8",
 		"prisma": "^5.10.0",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.3.3"
