--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
 		"helmet": "^8.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^2.0.1",
+		"reflect-metadata": "^0.2.2",
 		"unique-username-generator": "^1.4.0"
 	},
 	"devDependencies": {
