--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
 		"@types/express": "^4.17.21",
 		"@types/helmet": "^0.0.48",
 		"@types/jsonwebtoken": "^9.0.9",
+		"@types/uuid": "^8.3.0",
 		"bcrypt": "^6.0.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
@@ -32,7 +33,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^2.0.1",
 		"reflect-metadata": "^0.2.2",
-		"unique-username-generator": "^1.4.0"
+		"unique-username-generator": "^1.4.0",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
