--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-parallax-tilt": "^1.7.218",
     "react-redux": "^9.1.0",
     "styled-components": "^6.3.9",
+    "swiper": "^12.1.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
