--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.218",
