--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-icons": "^2.2.7",
     "@types/react-redux": "^7.1.34",
     "@vkontakte/vk-bridge": "^2.7.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "motion": "^12.33.0",
